infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus # tels the deployment which pod to manage
  template: # describes how pods should be created
    metadata:
      labels:
        app: event-bus # match the matchLabels entered in selector
    spec: 
        containers:
          - name: event-bus
            image: keyserve/event-bus:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP # the type is optional if not set default is ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
