infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query # tels the deployment which pod to manage
  template: # describes how pods should be created
    metadata:
      labels:
        app: query # match the matchLabels entered in selector
    spec: 
        containers:
          - name: query
            image: keyserve/query:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP # the type is optional if not set default is ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
